# fundamentals-of-nlp

./: .gitignore  README.md  pyproject.toml
exercise/: ch-01-q-01.md  ch-01-q-02.py  download-mediawiki.py
exercise/sub/: main.py
lib/: dataloader.py  stats.py  wiki_util.py
setup/: run-test-mecab.py
